src/components/pages/banner.scss
@import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");

.banner-container {
  width: 100%;
  padding: 97px 0 51px;
  // display: flex;
  // flex-direction: column;
  // justify-content: center;
  // object-fit: contain;
  // box-sizing: border-box;
  position: relative;
  overflow-x: clip;


  .section_1 {
    

    @media (max-width: 768px) {
      margin-left: 0px;
    }

    .deploy_title {
      color: #f2f2f2;
      font-family: Manrope;
      font-size: 28px;
      font-weight: 400;
      line-height: 120%;
      margin-bottom: 16px;

      @media (max-width: 768px) {
        margin-top: 0px;
        margin-bottom: 12px;
        font-size: 18px;
      }
    }
    .heading {
      max-width: 697.217px;
      font-family: Manrope;
      font-size: 60px;
      font-weight: 200;
      background: linear-gradient(135deg, #FFCF71 0%, #2376DD 100%);
      background-clip: text;
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
      margin-bottom: 40px;
    }
    .feature {
      max-width: 469.865px;
      color: #f1f1f1;
      font-family: Manrope;
      font-size: 18px;
      font-weight: 200;
      // line-height: 120%;
      letter-spacing: 1px;
      margin-bottom: 32px;
    }
    .btn_container {
      .btn_contact_sales {
        border-radius: 4px;
        border: 1px solid #e5be20;
        display: flex;
        padding: 16px 32px;
        align-items: center;
        font-family: Manrope;
        font-size: 14px;
        font-weight: 600;
        line-height: 20px;
        letter-spacing: 0.14px;
        color: #e5be20;
        background: none;
        cursor: pointer;
      }
    }
  }

  .video_container {
    position: absolute;
    top: -280px;
    right: -170px;
    max-width: 779.951px;
    max-height: 779.951px;
    transform: rotate(-45deg);
    mix-blend-mode: screen;
    video {
      max-width: 779.951px;
      max-height: 779.951px;
    }
  }


  .brands {
    display: flex;
    margin-top: 100px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* max-width: 1200px; */
    padding: 24px 24px 32px 24px;
    gap: 24px;
    border-radius: 12px;z-index: 1;overflow: hidden;
    // border: 1px solid #04446c;
    border:  1px solid #313e464a;
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) -111.16%, rgba(1, 16, 24, 0.1) 100%);
    box-shadow: 0px 28px 132px 0px rgba(0, 0, 0, 0.25);
    // -webkit-backdrop-filter: blur(16px);
    // backdrop-filter: blur(16px);
    /* margin-left: 8%; */
    // margin-bottom: 51px;
    /* box-sizing: border-box;*/

    // @media (max-width: 768px) {
    //   width: 100%;
    //   margin-left: 0px;
    //   max-width: 380px;
    //   padding: 32px 24px;
    //   gap: 32px;
    //   margin-bottom: 0px;
    // }
    .brand-dot-img {
      background: url('../../media/noise.webp');
      width: 100%;
      height: 100%;
      left: 0;
      z-index: -1;    bottom: 0;
      opacity: 0.1;
      filter: opacity(0.5);    background-repeat: repeat;
      background-size: contain;
    }
    .trust {
      opacity: 0.4;
      color: #fff;
      text-align: center;
      font-family: Manrope;
      font-size: 14px;
      font-style: normal;
      font-weight: 600;
      line-height: 150%;
      letter-spacing: 2px;

      @media (max-width: 768px) {
        font-size: 12px;
      }
    }

    .brands_images {
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 72px;
      @media (max-width: 768px) {
        flex-wrap: wrap;
        max-width: 348px;
      }
    }
  }
}




@media (max-width: 991px) {
  .banner-container{padding: 50px 0px 0;}
  .banner-container .section_1 .deploy_title{font-size: 18px;margin-bottom: 0px;}
  .banner-container .section_1 .heading{font-size: 48px;margin-bottom: 22px;max-width: 100%;line-height: 110%;}
  .banner-container .brands{margin-top: 70px;}
  .banner-container .video_container video {
    width: 650px;
    height: 650px;
  }
}


@media (max-width: 767px) {
  .banner-container .video_container video {
    width: auto;
    height: auto;max-width: 100%;
  }
  .banner-container .video_container{
    height: 380px;
    width: 380px;
    max-width: 100%;right: -140px;top: -140px;
    max-height: 100%;
  }
  .banner-container .section_1 .feature{font-size: 12px;font-weight: 200;}
  .banner-container .section_1 .btn_container .btn_contact_sales{padding: 12px 24px;}
  .banner-container .brands{align-items: normal;    max-width: 315px;}
  .banner-container .brands .brands_images{gap: 32px;flex-wrap: wrap;}
  
}

